welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:31: error: not found: value faireDiagG
faireDiagG(color.RED);
^PatternPicture:32: error: not found: value faireDiagD
faireDiagD(color.BLUE); 
^