welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	def faireDiagG(c : Color) {
		setCouleurBrosse(c : Color);
		gauche();
		avance();
		baisseBrosse();
		leveBrosse();
		droite();
		droite();
		avance();
		baisseBrosse();
		leveBrosse();
		droite();
		avance();
	}
	def faireDiagD (c : Color) {
		setCouleurBrosse(c : Color);
		baisseBrosse();
		leveBrosse();
		gauche();
		avance();
		droite();
		avance();
		baisseBrosse();
		leveBrosse();
		droite();
		avance();
		gauche();
	}
}
faireDiagG(color.RED);
faireDiagD(color.BLUE);